# clova-tutor

./: .env.example  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY  docker-compose.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025-03-11_initial_commit.py  2025-04-01_add_problem_table.py  2025-04-11_remove_m_type_field.py  2025-04-18_add_chat_problem_table.py  2025-04-18_add_number_column_to_chat_problem.py  2025-04-18_remove_problem_number_field.py  2025-04-22_add_timestamp_into_user_table.py  2025-04-22_add_user_id_into_chat_table.py  2025-04-22_create_user_table.py  2025-04-23_add_status_field_into_chatproblem_table.py  2025-04-24_add_last_answer_field_into_chatproblem.py  2025-04-30_add_metadata_column_into_message_table.py  2025-05-13_add_vector_problem_id_field.py  2025-05-22_create_user_unknown_concept_table.py  2025-06-04_change_chat_table_user_uuid_id.py  2025-06-04_change_user_uuid_id.py  2025-09-08_user.py  2025-09-09_goal.py  2025-09-12_delete_goal_is_finish.py  2025-09-12_goal_status.py  2025-09-24_fix_memo_size.py  2025-10-02_problem_category_size_up.py  2025-11-13_refactor.py  2025-11-18_problem_id_to_str.py  2025-11-25_add_problem_bookmarks.py
backend/proto/: modelchat.proto
backend/scripts/: preprocess_problem.py  problem.json  upload_problem_db.py  upload_problem_vector_db.py
backend/src/: all_models.py  main.py
backend/src/auths/: dependencies.py
backend/src/auths/presentation/: http_exceptions.py
backend/src/auths/service/: auth_service.py  exceptions.py
backend/src/chats/: dependencies.py
backend/src/chats/database/: models.py
backend/src/chats/domain/: chat.py  chat_problem.py
backend/src/chats/presentation/: chat_router.py  http_exceptions.py  problem_bookmark_router.py
backend/src/chats/service/: chat_message_service.py  chat_problem_service.py  chat_service.py  exceptions.py  i_assistant_service.py  i_stream_lock_service.py  i_stream_service.py
backend/src/chats/usecase/: chat_message_usecase.py  chat_problem_usecase.py  chat_usecase.py  exceptions.py  problem_bookmark_usecase.py
backend/src/chats/utils/: constants.py  utils.py
backend/src/common/: __init__.py
backend/src/common/database/: base.py  mixin.py
backend/src/common/domain/: schema.py
backend/src/common/infra/: redis.py  swagger_auth.py
backend/src/common/presentation/: auth_internal_api.py  http_exceptions.py  pagination.py  response.py
backend/src/common/service/: exceptions.py
backend/src/common/utils/: circuit_breaker.py  logger.py  utils.py
backend/src/config/: base_repo_config.py  config.py  lifespan.py  middleware.py
backend/src/goals/: dependencies.py
backend/src/goals/database/: models.py  repository.py
backend/src/goals/domain/: goal.py
backend/src/goals/presentation/: http_exceptions.py  router.py
backend/src/goals/service/: exceptions.py  goal_service.py
backend/src/goals/usecase/: exceptions.py  goal_usecase.py
backend/src/problems/: dependencies.py
backend/src/problems/database/: models.py  problem_mapper.py  repository.py
backend/src/problems/domain/: problem.py
backend/src/problems/presentation/: http_exceptions.py  router.py
backend/src/problems/service/: exceptions.py  problem_service.py
backend/src/problems/usecase/: exceptions.py  problem_usecase.py
backend/src/uploads/: dependencies.py
backend/src/uploads/infra/: local_storage.py  ncp_storage.py
backend/src/uploads/presentation/: http_exceptions.py  router.py
backend/src/uploads/service/: exceptions.py  i_upload_storage.py
backend/src/uploads/usecase/: exceptions.py  upload_usecase.py
backend/src/uploads/utils/: constants.py
backend/src/users/: dependencies.py
backend/src/users/database/: models.py
backend/src/users/domain/: user.py  user_unknown_concept.py
backend/src/users/presentation/: http_exceptions.py  router.py
backend/src/users/service/: exceptions.py  user_service.py  user_unknown_concept_service.py
backend/src/users/usecase/: user_unknown_concept_usecase.py  user_usecase.py
backend/tests/: conftest.py  fakes.py  utils.py
backend/tests/api/: conftest.py
backend/tests/api/chats/: test_chat.py
backend/tests/api/problems/: test_problem.py
backend/tests/api/users/: test_unknown_concepts.py  test_user_api.py
backend/tests/unit/: conftest.py
data-server/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data-server/src/: main.py
data-server/src/common/: logging.py
data-server/src/config/: config.py  lifespan.py
data-server/src/memory/: router.py
data-server/src/memory/entities/: schemas.py
data-server/src/vector/: docker-compose.yml  router.py  service.py  sim.py
data-server/src/vector/config/: add_db.yaml  delete_db.yaml  get.yaml  make_db.yaml  search.yaml
data-server/src/vector/utils/: embedding_module.py  processing_utils.py  rag_utils.py  weaviate_module.py
model-server/: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
model-server/proto/: modelchat.proto
model-server/scripts/: gen_proto.sh
model-server/src/: main.py
model-server/src/assistant/: api_info.yaml  run_sim.sh  setup.sh  sim.py
model-server/src/assistant/answer_template/: ai_messages.yaml
model-server/src/assistant/content_template/: eng.yaml
model-server/src/assistant/data/: eng_grammar_markdown.jsonl  grammar_topic.csv  opensource_math_course.csv  (+2 more)
model-server/src/assistant_adapter/: dependencies.py
model-server/src/common/: logger.py  schema.py
model-server/src/config/: config.py  grpc.py  lifespan.py  redis_cluster.py
(+607 files in other folders)
